<?xml version="1.0"?>
<package>
  <name>antdroid_antfirm</name>
  <version>0.1.0</version>
  <description>
      antdroid_antfirm is the arduino firmware to Antdroid. Antfirm works like a ROS node thanks to rosserial package.
  </description>

  <maintainer email="pando855@gmail.com">Alexander Gil</maintainer>
  <maintainer email="javieroman91@gmail.com">Javier Roman</maintainer>
  <license>GPLv3</license>
  <author email="pando855@gmail.com">Alexander Gil</author>
  <author email="javieroman91@gmail.com">Javier Roman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>antdroid_msgs</build_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>antdroid_msgs</run_depend>

  <export></export>
</package>