<?xml version="1.0"?>
<package>
  <name>antdroid_cam_control</name>
  <version>0.0.0</version>
  <description>Provides control from image proecessing.</description>

  <maintainer email="pando855@gmail.com">Alexander Gil</maintainer>
  <maintainer email="javieroman91@gmail.com">Javier Roman</maintainer>
  
 <license>GPLv3</license>
  <author email="pando855@gmail.com">Alexander Gil</author>
  <author email="javieroman91@gmail.com">Javier Roman</author>

  <buildtool_depend>catkin</buildtool_depend>

      <!-- Antdroid 
  <build_depend>antdroid_control_interpreter</build_depend>
-->
      <!-- Ros -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

      <!-- Other -->
  <build_depend>libopencv-dev</build_depend>

      <!-- Antdroid 
  <run_depend>antdroid_control_interpreter</run_depend>
-->
      <!-- Ros -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

      <!-- Other -->
  <run_depend>libopencv-dev</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>